fix(css): use border instead of grid-gap

--- a/src/components/PlaylistItems/PlaylistItemsView.css
+++ b/src/components/PlaylistItems/PlaylistItemsView.css
@@ -27,6 +27,8 @@ button#trash:disabled {
 }
 
 div#playlistItemsView .table .row {
+  border: 0.5px solid #ffffff;
+
   text-align: center;
 
   background: #181818;
